--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,5 +18,6 @@ export(plotUMAP)
 export(plotViolin)
 export(updateClusterLabels)
 export(updateResolution)
+import(tidyseurat)
 importFrom(dplyr,mutate)
 importFrom(magrittr,"%>%")
